--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@capacitor/status-bar": "7.0.0",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
+    "@material/web": "^2.2.0",
     "ionicons": "^7.0.0",
     "vue": "^3.3.0",
+    "vue-i18n": "^9.14.3",
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
