--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@capacitor/android": "7.1.0",
     "@capacitor/app": "7.0.0",
     "@capacitor/core": "7.1.0",
     "@capacitor/haptics": "7.0.0",
@@ -20,7 +21,9 @@
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
     "@material/web": "^2.2.0",
+    "@tailwindcss/vite": "^4.0.15",
     "ionicons": "^7.0.0",
+    "tailwindcss": "^4.0.15",
     "vue": "^3.3.0",
     "vue-i18n": "^9.14.3",
     "vue-router": "^4.2.0"
@@ -32,7 +35,6 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.3.0",
     "cypress": "^13.5.0",
-    "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^22.1.0",
     "terser": "^5.4.0",
