--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ionic/vue-router": "^8.0.0",
     "@material/web": "^2.2.0",
     "@tailwindcss/vite": "^4.0.15",
+    "fitty": "^2.4.2",
     "ionicons": "^7.0.0",
     "tailwindcss": "^4.0.15",
     "vue": "^3.3.0",
