--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/vite": "^4.0.15",
     "fitty": "^2.4.2",
     "ionicons": "^7.0.0",
+    "reka-ui": "^2.1.1",
     "tailwindcss": "^4.0.15",
     "vue": "^3.3.0",
     "vue-i18n": "^9.14.3",
