--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ionic/vue-router": "^8.0.0",
     "@material/web": "^2.2.0",
     "@tailwindcss/vite": "^4.0.15",
+    "@vueuse/sound": "^2.1.3",
     "fitty": "^2.4.2",
     "ionicons": "^7.0.0",
     "reka-ui": "^2.1.1",
@@ -34,6 +35,7 @@
     "@capacitor/cli": "7.1.0",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/devtools": "^7.7.2",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.3.0",
     "cypress": "^13.5.0",
