--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/core": "7.1.0",
     "@capacitor/haptics": "7.0.0",
     "@capacitor/keyboard": "7.0.0",
+    "@capacitor/network": "^7.0.1",
     "@capacitor/status-bar": "7.0.0",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
@@ -25,6 +26,7 @@
     "@vueuse/sound": "^2.1.3",
     "fitty": "^2.4.2",
     "ionicons": "^7.0.0",
+    "reconnecting-websocket": "^4.4.0",
     "reka-ui": "^2.1.1",
     "tailwindcss": "^4.0.15",
     "vue": "^3.3.0",
