--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vueuse/sound": "^2.1.3",
     "fitty": "^2.4.2",
     "ionicons": "^7.0.0",
+    "pinia": "^3.0.2",
     "reconnecting-websocket": "^4.4.0",
     "reka-ui": "^2.1.1",
     "tailwindcss": "^4.0.15",
